fixed gallery section height to remove gap between the end of the section and the ext on larger phone screens

--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ ol.carousel-indicators {
 <--- -------------------------- -*/
 
 #gallery {
-	height: 2500px;
+	height: auto;
 }
 
 .gallery-content {
@@ -740,7 +740,12 @@ ol.carousel-indicators {
 .gallery {
 	display: flex;
 	flex-direction: column;
-	height: 250px;
+	height: auto;
+}
+
+.gallery img {
+    width: 100%;
+    height: 100%;
 }
 
 /*-- -------------------------- -->
